[FIX]: background on mobile, refactor language switcher

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,7 +79,7 @@
 :root {
   --main-container-top-space-base: 120px;
   --color-info-background: rgba(255, 255, 255, 0.05); /*bg-info-background*/
-  --root-bg-base: radial-gradient(circle, #93a5cf 0%, #e4efe9 100%);
+  --root-bg-base: radial-gradient(circle, #93a5cf 0%, #e4efe9 90%, #e4efe9 100%);
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
@@ -127,7 +127,7 @@
 }
 
 .dark {
-  --root-bg-base: radial-gradient(circle, #29323c 0%, #485563 100%);
+  --root-bg-base: radial-gradient(circle, #29323c 0%, #485563 90%, #485563 100%);
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
@@ -166,7 +166,8 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    /* @apply bg-background text-foreground; */
+    @apply text-foreground;
   }
   button:not([disabled]),
   [role='button']:not([disabled]) {
@@ -193,57 +194,6 @@
   pointer-events: none;
 }
 
-/* Global background styles because css modules had a "flash/blink effect" issue */
-.global-background-container {
-  position: fixed;
-  inset: 0;
-  z-index: -1;
-}
-
-.global-background-item {
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  transition: opacity 0.8s ease-in-out;
-  background: var(--root-bg-base);
-}
-
-.global-background-item.global-background-item-active {
-  opacity: 1;
-}
-
-.global-background-item-0 {
-  background: radial-gradient(circle, #2a7b9b 0%, #57c785 50%, #eddd53 100%);
-}
-
-.dark .global-background-item-0 {
-  background: radial-gradient(circle, #162e3d 0%, #333b66 60%, #1a1b26 100%);
-}
-
-.global-background-item-1 {
-  background: radial-gradient(circle, #3db47a 0%, #eddd53 50%, #feb47b 100%);
-}
-
-.dark .global-background-item-1 {
-  background: radial-gradient(circle, #333b66 0%, #63608b 50%, #001c2f 100%);
-}
-
-.global-background-item-2 {
-  background: radial-gradient(circle, #ff7e5f 0%, #feb47b 50%, #86a8e7 100%);
-}
-
-.dark .global-background-item-2 {
-  background: radial-gradient(circle, #333b66 0%, #326a9d 45%, #0a0c14 100%);
-}
-
-.global-background-item-3 {
-  background: var(--root-bg-base);
-}
-
-.dark .global-background-item-3 {
-  background: var(--root-bg-base);
-}
-
 /* 
 Syntax in Tailwind v4 for @custom-variant different between PostCSS-plugins with old style.
 @custom-variant motion-reduce (@media (prefers-reduced-motion: reduce) { &:is(&) }); 
@@ -261,4 +211,111 @@ Syntax in Tailwind v4 for @custom-variant different between PostCSS-plugins with
 @custom-variant rtl (&:is([dir="rtl"] &));
 .text {
   @apply text-left rtl:text-right;
+}
+
+/* Global background styles because css modules had a "flash/blink effect" issue */
+
+html {
+  height: 100vh;
+  height: 100lvh;
+  transition: background-color 0.8s ease-in-out;
+}
+
+/* 
+Theme background colors
+*/
+
+/* --- LIGHT MODE --- */
+
+html:has(.global-background-item-0.global-background-item-active) {
+  background-color: #eddd53;
+}
+
+html:has(.global-background-item-1.global-background-item-active) {
+  background-color: #feb47b;
+}
+
+html:has(.global-background-item-2.global-background-item-active) {
+  background-color: #86a8e7;
+}
+
+html:has(.global-background-item-3.global-background-item-active) {
+  background-color: #e4efe9;
+}
+
+html:has(.global-background-item-4.global-background-item-active) {
+  background-color: #e4efe9;
+}
+
+/* --- DARK MODE --- */
+
+html.dark:has(.global-background-item-0.global-background-item-active) {
+  background-color: #1a1b26;
+}
+
+html.dark:has(.global-background-item-1.global-background-item-active) {
+  background-color: #001c2f;
+}
+
+html.dark:has(.global-background-item-2.global-background-item-active) {
+  background-color: #0a0c14;
+}
+
+html.dark:has(.global-background-item-3.global-background-item-active) {
+  background-color: #485563;
+}
+
+html.dark:has(.global-background-item-4.global-background-item-active) {
+  background-color: #485563;
+}
+
+.global-background-container {
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.global-background-item {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: opacity 0.8s ease-in-out;
+  background: var(--root-bg-base);
+}
+
+.global-background-item.global-background-item-active {
+  opacity: 1;
+}
+
+.global-background-item-0 {
+  background: radial-gradient(circle, #2a7b9b 0%, #57c785 50%, #eddd53 90%, #eddd53 100%);
+}
+
+.dark .global-background-item-0 {
+  background: radial-gradient(circle, #162e3d 0%, #333b66 60%, #1a1b26 90%, #1a1b26 100%);
+}
+
+.global-background-item-1 {
+  background: radial-gradient(circle, #3db47a 0%, #eddd53 50%, #feb47b 90%, #feb47b 100%);
+}
+
+.dark .global-background-item-1 {
+  background: radial-gradient(circle, #333b66 0%, #63608b 50%, #001c2f 90%, #001c2f 100%);
+}
+
+.global-background-item-2 {
+  background: radial-gradient(circle, #ff7e5f 0%, #feb47b 50%, #86a8e7 90%, #86a8e7 100%);
+}
+
+.dark .global-background-item-2 {
+  background: radial-gradient(circle, #333b66 0%, #326a9d 45%, #0a0c14 90%, #0a0c14 100%);
+}
+
+.global-background-item-3 {
+  background: var(--root-bg-base);
+}
+
+.dark .global-background-item-3 {
+  background: var(--root-bg-base);
 }
